// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should render correctly: default 1`] = `
<div
  className="source-viewer-bubble-popup abs-width-400"
>
  <div>
    <h4>
      author
    </h4>
    foo
  </div>
  <div
    className="spacer-top"
  >
    <h4>
      source_viewer.tooltip.scm.commited_on
    </h4>
    <DateFormatter
      date="2017-01-01"
    />
  </div>
  <div
    className="spacer-top"
  >
    <h4>
      source_viewer.tooltip.scm.revision
    </h4>
    bar
  </div>
</div>
`;

exports[`should render correctly: no author 1`] = `
<div
  className="source-viewer-bubble-popup abs-width-400"
>
  <div
    className=""
  >
    <h4>
      source_viewer.tooltip.scm.commited_on
    </h4>
    <DateFormatter
      date="2017-01-01"
    />
  </div>
  <div
    className="spacer-top"
  >
    <h4>
      source_viewer.tooltip.scm.revision
    </h4>
    bar
  </div>
</div>
`;

exports[`should render correctly: no date 1`] = `
<div
  className="source-viewer-bubble-popup abs-width-400"
>
  <div>
    <h4>
      author
    </h4>
    foo
  </div>
  <div
    className="spacer-top"
  >
    <h4>
      source_viewer.tooltip.scm.revision
    </h4>
    bar
  </div>
</div>
`;

exports[`should render correctly: no revision 1`] = `
<div
  className="source-viewer-bubble-popup abs-width-400"
>
  <div>
    <h4>
      author
    </h4>
    foo
  </div>
  <div
    className="spacer-top"
  >
    <h4>
      source_viewer.tooltip.scm.commited_on
    </h4>
    <DateFormatter
      date="2017-01-01"
    />
  </div>
</div>
`;
